--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 git+https://github.com/huggingface/transformers.git
 accelerate==0.27.1
 datasets>=2.16.1
-bitsandbytes==0.41.3
+bitsandbytes==0.45.0
 peft==0.8.2
 trl==0.7.10
-wandb==0.16.3
+wandb==0.19.1
 huggingface_hub==0.24.3
 
-pip install --upgrade bitsandbytes
+# pip install --upgrade bitsandbytes
+# pip install --upgrade trl 
+# pip install --upgrade wandb
